# Joi

./: .gitignore  .npmrc  components.d.ts  electron-builder.json5  package-lock.json  package.json  tsconfig.json  有观战.json
electron/: main.ts  tsconfig.json
electron/const/: const.ts
electron/lcu/: connector.ts  lcuRequest.ts  processEvent.ts
electron/lib/: ws-lobby.js
electron/types/: lcuType.ts
electron/util/: authUtil.ts
py_lobby_server/: index.html  pyproject.toml
py_lobby_server/app/: main.py  test_main.py
src/: theme.ts
src/api/: lcuApi.ts
src/assets/: item.json
src/components/gameFlow/: inChampSelect.vue  inLobby.vue  noneFlowFight.vue
src/listener/: backgroundListener.ts
src/page/: InGame2.vue
src/router/: index.ts
src/store/: lcu.ts
types/: vicons.d.ts
