[tool.poetry]
name = "lobby-server"
version = "0.1.0"
description = ""
authors = ["Tian_que <1605206150@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[[tool.poetry.source]]
priority = "default"
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
